--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "QuizReader Webapp",
   "license": "GPL-3.0+",
   "dependencies": {
-    "lit-element": "2.5.1",
-    "lit-html": "1.4.1"
+    "@lit/context": "^1.0.1",
+    "lit": "^3.0.2"
   },
   "devDependencies": {
     "@web/dev-server": "^0.1.31"
