--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@web/dev-server": "^0.4.6",
     "@web/rollup-plugin-html": "^2.1.0",
-    "rollup": "^2.79.1"
+    "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0"
   },
   "scripts": {
     "serve": "wds --node-resolve --watch",
