--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@web/dev-server": "^0.4.6",
     "@web/rollup-plugin-html": "^2.1.0",
+    "lit-analyzer": "^2.0.3",
     "prettier": "3.3.3",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0"
@@ -19,6 +20,7 @@
   "scripts": {
     "build": "rollup -c",
     "format": "prettier . --write",
+    "lit-analyzer": "lit-analyzer src",
     "serve": "wds --node-resolve --watch",
     "serve:prod": "MODE=prod npm run serve"
   }
